trabalho_05_final/pylang/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> expression SEMICOLON
Rule 5     statement -> assignment SEMICOLON
Rule 6     statement -> conditional
Rule 7     statement -> loop
Rule 8     statement -> function_declaration
Rule 9     statement -> return_statement SEMICOLON
Rule 10    statement -> print_statement SEMICOLON
Rule 11    statement -> input_statement SEMICOLON
Rule 12    statement -> block
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression MODULO expression
Rule 18    expression -> expression EQ expression
Rule 19    expression -> expression NEQ expression
Rule 20    expression -> expression LT expression
Rule 21    expression -> expression LE expression
Rule 22    expression -> expression GT expression
Rule 23    expression -> expression GE expression
Rule 24    expression -> expression AND expression
Rule 25    expression -> expression OR expression
Rule 26    expression -> NOT expression
Rule 27    expression -> LPAREN expression RPAREN
Rule 28    expression -> value
Rule 29    conditional -> IF LPAREN expression RPAREN statement
Rule 30    conditional -> IF LPAREN expression RPAREN statement ELSE statement
Rule 31    return_statement -> RETURN expression
Rule 32    return_statement -> RETURN
Rule 33    print_statement -> PRINT LPAREN expression RPAREN
Rule 34    input_statement -> INPUT LPAREN STRING RPAREN
Rule 35    input_statement -> INPUT LPAREN RPAREN
Rule 36    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 37    value -> NUMBER
Rule 38    value -> STRING
Rule 39    value -> ID
Rule 40    value -> boolean
Rule 41    value -> function_call
Rule 42    boolean -> TRUE
Rule 43    boolean -> FALSE
Rule 44    arg_list -> arg_list COMMA expression
Rule 45    arg_list -> expression
Rule 46    arg_list -> empty
Rule 47    empty -> <empty>
Rule 48    assignment -> ID ASSIGN expression
Rule 49    loop -> WHILE LPAREN expression RPAREN statement
Rule 50    loop -> FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN statement
Rule 51    function_declaration -> FUNCTION ID LPAREN params RPAREN block
Rule 52    params -> param_list
Rule 53    params -> empty
Rule 54    param_list -> param_list COMMA ID
Rule 55    param_list -> ID
Rule 56    function_call -> ID LPAREN arg_list RPAREN
Rule 57    block -> LBRACE statements RBRACE

Terminals, with rules where they appear

AND                  : 24
ASSIGN               : 48
COMMA                : 44 54
DIVIDE               : 16
ELSE                 : 30
EQ                   : 18
FALSE                : 43
FOR                  : 50
FUNCTION             : 51
GE                   : 23
GT                   : 22
ID                   : 39 48 51 54 55 56
IF                   : 29 30
INPUT                : 34 35
LBRACE               : 57
LE                   : 21
LPAREN               : 27 29 30 33 34 35 36 49 50 51 56
LT                   : 20
MINUS                : 14
MODULO               : 17
NEQ                  : 19
NOT                  : 26
NUMBER               : 37
OR                   : 25
PLUS                 : 13
PRINT                : 33
RBRACE               : 57
RETURN               : 31 32
RPAREN               : 27 29 30 33 34 35 36 49 50 51 56
SEMICOLON            : 4 5 9 10 11 50 50
STRING               : 34 38
TIMES                : 15
TRUE                 : 42
WHILE                : 36 49
error                : 

Nonterminals, with rules where they appear

arg_list             : 44 56
assignment           : 5 50 50
block                : 12 51
boolean              : 40
conditional          : 6
empty                : 46 53
expression           : 4 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 27 29 30 31 33 36 44 45 48 49 50
function_call        : 41
function_declaration : 8
input_statement      : 11
loop                 : 7
param_list           : 52 54
params               : 51
print_statement      : 10
program              : 0
return_statement     : 9
statement            : 2 3 29 30 30 36 49 50
statements           : 1 2 57
value                : 28
while_statement      : 

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . assignment SEMICOLON
    (6) statement -> . conditional
    (7) statement -> . loop
    (8) statement -> . function_declaration
    (9) statement -> . return_statement SEMICOLON
    (10) statement -> . print_statement SEMICOLON
    (11) statement -> . input_statement SEMICOLON
    (12) statement -> . block
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . value
    (48) assignment -> . ID ASSIGN expression
    (29) conditional -> . IF LPAREN expression RPAREN statement
    (30) conditional -> . IF LPAREN expression RPAREN statement ELSE statement
    (49) loop -> . WHILE LPAREN expression RPAREN statement
    (50) loop -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN statement
    (51) function_declaration -> . FUNCTION ID LPAREN params RPAREN block
    (31) return_statement -> . RETURN expression
    (32) return_statement -> . RETURN
    (33) print_statement -> . PRINT LPAREN expression RPAREN
    (34) input_statement -> . INPUT LPAREN STRING RPAREN
    (35) input_statement -> . INPUT LPAREN RPAREN
    (57) block -> . LBRACE statements RBRACE
    (37) value -> . NUMBER
    (38) value -> . STRING
    (39) value -> . ID
    (40) value -> . boolean
    (41) value -> . function_call
    (42) boolean -> . TRUE
    (43) boolean -> . FALSE
    (56) function_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 13
    LPAREN          shift and go to state 14
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    FUNCTION        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    INPUT           shift and go to state 23
    LBRACE          shift and go to state 25
    NUMBER          shift and go to state 26
    STRING          shift and go to state 24
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    conditional                    shift and go to state 6
    loop                           shift and go to state 7
    function_declaration           shift and go to state 8
    return_statement               shift and go to state 9
    print_statement                shift and go to state 10
    input_statement                shift and go to state 11
    block                          shift and go to state 12
    value                          shift and go to state 15
    boolean                        shift and go to state 27
    function_call                  shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . assignment SEMICOLON
    (6) statement -> . conditional
    (7) statement -> . loop
    (8) statement -> . function_declaration
    (9) statement -> . return_statement SEMICOLON
    (10) statement -> . print_statement SEMICOLON
    (11) statement -> . input_statement SEMICOLON
    (12) statement -> . block
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . value
    (48) assignment -> . ID ASSIGN expression
    (29) conditional -> . IF LPAREN expression RPAREN statement
    (30) conditional -> . IF LPAREN expression RPAREN statement ELSE statement
    (49) loop -> . WHILE LPAREN expression RPAREN statement
    (50) loop -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN statement
    (51) function_declaration -> . FUNCTION ID LPAREN params RPAREN block
    (31) return_statement -> . RETURN expression
    (32) return_statement -> . RETURN
    (33) print_statement -> . PRINT LPAREN expression RPAREN
    (34) input_statement -> . INPUT LPAREN STRING RPAREN
    (35) input_statement -> . INPUT LPAREN RPAREN
    (57) block -> . LBRACE statements RBRACE
    (37) value -> . NUMBER
    (38) value -> . STRING
    (39) value -> . ID
    (40) value -> . boolean
    (41) value -> . function_call
    (42) boolean -> . TRUE
    (43) boolean -> . FALSE
    (56) function_call -> . ID LPAREN arg_list RPAREN

    $end            reduce using rule 1 (program -> statements .)
    NOT             shift and go to state 13
    LPAREN          shift and go to state 14
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    FUNCTION        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    INPUT           shift and go to state 23
    LBRACE          shift and go to state 25
    NUMBER          shift and go to state 26
    STRING          shift and go to state 24
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    statement                      shift and go to state 31
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    conditional                    shift and go to state 6
    loop                           shift and go to state 7
    function_declaration           shift and go to state 8
    return_statement               shift and go to state 9
    print_statement                shift and go to state 10
    input_statement                shift and go to state 11
    block                          shift and go to state 12
    value                          shift and go to state 15
    boolean                        shift and go to state 27
    function_call                  shift and go to state 28

state 3

    (3) statements -> statement .

    NOT             reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    FUNCTION        reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    PRINT           reduce using rule 3 (statements -> statement .)
    INPUT           reduce using rule 3 (statements -> statement .)
    LBRACE          reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    TRUE            reduce using rule 3 (statements -> statement .)
    FALSE           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> expression . SEMICOLON
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . MODULO expression
    (18) expression -> expression . EQ expression
    (19) expression -> expression . NEQ expression
    (20) expression -> expression . LT expression
    (21) expression -> expression . LE expression
    (22) expression -> expression . GT expression
    (23) expression -> expression . GE expression
    (24) expression -> expression . AND expression
    (25) expression -> expression . OR expression

    SEMICOLON       shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    MODULO          shift and go to state 37
    EQ              shift and go to state 38
    NEQ             shift and go to state 39
    LT              shift and go to state 40
    LE              shift and go to state 41
    GT              shift and go to state 42
    GE              shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45


state 5

    (5) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 46


state 6

    (6) statement -> conditional .

    NOT             reduce using rule 6 (statement -> conditional .)
    LPAREN          reduce using rule 6 (statement -> conditional .)
    ID              reduce using rule 6 (statement -> conditional .)
    IF              reduce using rule 6 (statement -> conditional .)
    WHILE           reduce using rule 6 (statement -> conditional .)
    FOR             reduce using rule 6 (statement -> conditional .)
    FUNCTION        reduce using rule 6 (statement -> conditional .)
    RETURN          reduce using rule 6 (statement -> conditional .)
    PRINT           reduce using rule 6 (statement -> conditional .)
    INPUT           reduce using rule 6 (statement -> conditional .)
    LBRACE          reduce using rule 6 (statement -> conditional .)
    NUMBER          reduce using rule 6 (statement -> conditional .)
    STRING          reduce using rule 6 (statement -> conditional .)
    TRUE            reduce using rule 6 (statement -> conditional .)
    FALSE           reduce using rule 6 (statement -> conditional .)
    $end            reduce using rule 6 (statement -> conditional .)
    RBRACE          reduce using rule 6 (statement -> conditional .)
    ELSE            reduce using rule 6 (statement -> conditional .)


state 7

    (7) statement -> loop .

    NOT             reduce using rule 7 (statement -> loop .)
    LPAREN          reduce using rule 7 (statement -> loop .)
    ID              reduce using rule 7 (statement -> loop .)
    IF              reduce using rule 7 (statement -> loop .)
    WHILE           reduce using rule 7 (statement -> loop .)
    FOR             reduce using rule 7 (statement -> loop .)
    FUNCTION        reduce using rule 7 (statement -> loop .)
    RETURN          reduce using rule 7 (statement -> loop .)
    PRINT           reduce using rule 7 (statement -> loop .)
    INPUT           reduce using rule 7 (statement -> loop .)
    LBRACE          reduce using rule 7 (statement -> loop .)
    NUMBER          reduce using rule 7 (statement -> loop .)
    STRING          reduce using rule 7 (statement -> loop .)
    TRUE            reduce using rule 7 (statement -> loop .)
    FALSE           reduce using rule 7 (statement -> loop .)
    $end            reduce using rule 7 (statement -> loop .)
    RBRACE          reduce using rule 7 (statement -> loop .)
    ELSE            reduce using rule 7 (statement -> loop .)


state 8

    (8) statement -> function_declaration .

    NOT             reduce using rule 8 (statement -> function_declaration .)
    LPAREN          reduce using rule 8 (statement -> function_declaration .)
    ID              reduce using rule 8 (statement -> function_declaration .)
    IF              reduce using rule 8 (statement -> function_declaration .)
    WHILE           reduce using rule 8 (statement -> function_declaration .)
    FOR             reduce using rule 8 (statement -> function_declaration .)
    FUNCTION        reduce using rule 8 (statement -> function_declaration .)
    RETURN          reduce using rule 8 (statement -> function_declaration .)
    PRINT           reduce using rule 8 (statement -> function_declaration .)
    INPUT           reduce using rule 8 (statement -> function_declaration .)
    LBRACE          reduce using rule 8 (statement -> function_declaration .)
    NUMBER          reduce using rule 8 (statement -> function_declaration .)
    STRING          reduce using rule 8 (statement -> function_declaration .)
    TRUE            reduce using rule 8 (statement -> function_declaration .)
    FALSE           reduce using rule 8 (statement -> function_declaration .)
    $end            reduce using rule 8 (statement -> function_declaration .)
    RBRACE          reduce using rule 8 (statement -> function_declaration .)
    ELSE            reduce using rule 8 (statement -> function_declaration .)


state 9

    (9) statement -> return_statement . SEMICOLON

    SEMICOLON       shift and go to state 47


state 10

    (10) statement -> print_statement . SEMICOLON

    SEMICOLON       shift and go to state 48


state 11

    (11) statement -> input_statement . SEMICOLON

    SEMICOLON       shift and go to state 49


state 12

    (12) statement -> block .

    NOT             reduce using rule 12 (statement -> block .)
    LPAREN          reduce using rule 12 (statement -> block .)
    ID              reduce using rule 12 (statement -> block .)
    IF              reduce using rule 12 (statement -> block .)
    WHILE           reduce using rule 12 (statement -> block .)
    FOR             reduce using rule 12 (statement -> block .)
    FUNCTION        reduce using rule 12 (statement -> block .)
    RETURN          reduce using rule 12 (statement -> block .)
    PRINT           reduce using rule 12 (statement -> block .)
    INPUT           reduce using rule 12 (statement -> block .)
    LBRACE          reduce using rule 12 (statement -> block .)
    NUMBER          reduce using rule 12 (statement -> block .)
    STRING          reduce using rule 12 (statement -> block .)
    TRUE            reduce using rule 12 (statement -> block .)
    FALSE           reduce using rule 12 (statement -> block .)
    $end            reduce using rule 12 (statement -> block .)
    RBRACE          reduce using rule 12 (statement -> block .)
    ELSE            reduce using rule 12 (statement -> block .)


state 13

    (26) expression -> NOT . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . value
    (37) value -> . NUMBER
    (38) value -> . STRING
    (39) value -> . ID
    (40) value -> . boolean
    (41) value -> . function_call
    (42) boolean -> . TRUE
    (43) boolean -> . FALSE
    (56) function_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 13
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 26
    STRING          shift and go to state 24
    ID              shift and go to state 51
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    expression                     shift and go to state 50
    value                          shift and go to state 15
    boolean                        shift and go to state 27
    function_call                  shift and go to state 28

state 14

    (27) expression -> LPAREN . expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . value
    (37) value -> . NUMBER
    (38) value -> . STRING
    (39) value -> . ID
    (40) value -> . boolean
    (41) value -> . function_call
    (42) boolean -> . TRUE
    (43) boolean -> . FALSE
    (56) function_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 13
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 26
    STRING          shift and go to state 24
    ID              shift and go to state 51
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    expression                     shift and go to state 52
    value                          shift and go to state 15
    boolean                        shift and go to state 27
    function_call                  shift and go to state 28

state 15

    (28) expression -> value .

    SEMICOLON       reduce using rule 28 (expression -> value .)
    PLUS            reduce using rule 28 (expression -> value .)
    MINUS           reduce using rule 28 (expression -> value .)
    TIMES           reduce using rule 28 (expression -> value .)
    DIVIDE          reduce using rule 28 (expression -> value .)
    MODULO          reduce using rule 28 (expression -> value .)
    EQ              reduce using rule 28 (expression -> value .)
    NEQ             reduce using rule 28 (expression -> value .)
    LT              reduce using rule 28 (expression -> value .)
    LE              reduce using rule 28 (expression -> value .)
    GT              reduce using rule 28 (expression -> value .)
    GE              reduce using rule 28 (expression -> value .)
    AND             reduce using rule 28 (expression -> value .)
    OR              reduce using rule 28 (expression -> value .)
    RPAREN          reduce using rule 28 (expression -> value .)
    COMMA           reduce using rule 28 (expression -> value .)


state 16

    (48) assignment -> ID . ASSIGN expression
    (39) value -> ID .
    (56) function_call -> ID . LPAREN arg_list RPAREN

    ASSIGN          shift and go to state 53
    SEMICOLON       reduce using rule 39 (value -> ID .)
    PLUS            reduce using rule 39 (value -> ID .)
    MINUS           reduce using rule 39 (value -> ID .)
    TIMES           reduce using rule 39 (value -> ID .)
    DIVIDE          reduce using rule 39 (value -> ID .)
    MODULO          reduce using rule 39 (value -> ID .)
    EQ              reduce using rule 39 (value -> ID .)
    NEQ             reduce using rule 39 (value -> ID .)
    LT              reduce using rule 39 (value -> ID .)
    LE              reduce using rule 39 (value -> ID .)
    GT              reduce using rule 39 (value -> ID .)
    GE              reduce using rule 39 (value -> ID .)
    AND             reduce using rule 39 (value -> ID .)
    OR              reduce using rule 39 (value -> ID .)
    LPAREN          shift and go to state 54


state 17

    (29) conditional -> IF . LPAREN expression RPAREN statement
    (30) conditional -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 55


state 18

    (49) loop -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 56


state 19

    (50) loop -> FOR . LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN statement

    LPAREN          shift and go to state 57


state 20

    (51) function_declaration -> FUNCTION . ID LPAREN params RPAREN block

    ID              shift and go to state 58


state 21

    (31) return_statement -> RETURN . expression
    (32) return_statement -> RETURN .
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . value
    (37) value -> . NUMBER
    (38) value -> . STRING
    (39) value -> . ID
    (40) value -> . boolean
    (41) value -> . function_call
    (42) boolean -> . TRUE
    (43) boolean -> . FALSE
    (56) function_call -> . ID LPAREN arg_list RPAREN

    SEMICOLON       reduce using rule 32 (return_statement -> RETURN .)
    NOT             shift and go to state 13
    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 26
    STRING          shift and go to state 24
    ID              shift and go to state 51
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    expression                     shift and go to state 59
    value                          shift and go to state 15
    boolean                        shift and go to state 27
    function_call                  shift and go to state 28

state 22

    (33) print_statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 60


state 23

    (34) input_statement -> INPUT . LPAREN STRING RPAREN
    (35) input_statement -> INPUT . LPAREN RPAREN

    LPAREN          shift and go to state 61


state 24

    (38) value -> STRING .

    SEMICOLON       reduce using rule 38 (value -> STRING .)
    PLUS            reduce using rule 38 (value -> STRING .)
    MINUS           reduce using rule 38 (value -> STRING .)
    TIMES           reduce using rule 38 (value -> STRING .)
    DIVIDE          reduce using rule 38 (value -> STRING .)
    MODULO          reduce using rule 38 (value -> STRING .)
    EQ              reduce using rule 38 (value -> STRING .)
    NEQ             reduce using rule 38 (value -> STRING .)
    LT              reduce using rule 38 (value -> STRING .)
    LE              reduce using rule 38 (value -> STRING .)
    GT              reduce using rule 38 (value -> STRING .)
    GE              reduce using rule 38 (value -> STRING .)
    AND             reduce using rule 38 (value -> STRING .)
    OR              reduce using rule 38 (value -> STRING .)
    RPAREN          reduce using rule 38 (value -> STRING .)
    COMMA           reduce using rule 38 (value -> STRING .)


state 25

    (57) block -> LBRACE . statements RBRACE
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . assignment SEMICOLON
    (6) statement -> . conditional
    (7) statement -> . loop
    (8) statement -> . function_declaration
    (9) statement -> . return_statement SEMICOLON
    (10) statement -> . print_statement SEMICOLON
    (11) statement -> . input_statement SEMICOLON
    (12) statement -> . block
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression MODULO expression
    (18) expression -> . expression EQ expression
    (19) expression -> . expression NEQ expression
    (20) expression -> . expression LT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GT expression
    (23) expression -> . expression GE expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . LPAREN expression RPAREN
    (28) expression -> . value
    (48) assignment -> . ID ASSIGN expression
    (29) conditional -> . IF LPAREN expression RPAREN statement
    (30) conditional -> . IF LPAREN expression RPAREN statement ELSE statement
    (49) loop -> . WHILE LPAREN expression RPAREN statement
    (50) loop -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN statement
    (51) function_declaration -> . FUNCTION ID LPAREN params RPAREN block
    (31) return_statement -> . RETURN expression
    (32) return_statement -> . RETURN
    (33) print_statement -> . PRINT LPAREN expression RPAREN
    (34) input_statement -> . INPUT LPAREN STRING RPAREN
    (35) input_statement -> . INPUT LPAREN RPAREN
    (57) block -> . LBRACE statements RBRACE
    (37) value -> . NUMBER
    (38) value -> . STRING
    (39) value -> . ID
    (40) value -> . boolean
    (41) value -> . function_call
    (42) boolean -> . TRUE
    (43) boolean -> . FALSE
    (56) function_call -> . ID LPAREN arg_list RPAREN

    NOT             shift and go to state 13
    LPAREN          shift and go to state 14
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    FUNCTION        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    INPUT           shift and go to state 23
    LBRACE          shift and go to state 25
    NUMBER          shift and go to state 26
    STRING          shift and go to state 24
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30

    statements                     shift and go to state 62
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    assignment                     shift and go to state 5
    conditional                    shift and go to state 6
    loop                           shift and go to state 7
    function_declaration           shift and go to state 8
    return_statement               shift and go to state 9
    print_statement                shift and go to state 10
    input_statement                shift and go to state 11
    block                          shift and go to state 12
    value                          shift and go to state 15
    boolean                        shift and go to state 27
    function_call                  shift and go to state 28

state 26

    (37) value -> NUMBER .
